crates/qwik-optimizer-oxc/tests/snapshots/example_server_auth.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
import { serverAuth$, auth$ } from "@auth/qwik";

export const { onRequest, logout, getSession, signup } = serverAuth$({
  providers: [
    GitHub({
      clientId: process.env.GITHUB_ID,
      clientSecret: process.env.GITHUB_SECRET,
    }),
    Facebook({
      clientId: import.meta.env.FACEBOOK_ID,
      clientSecret: import.meta.env.FACEBOOK_SECRET,
    }),
    Google({
      clientId: process.env.GOOGLE_ID,
      clientSecret: process.env.GOOGLE_SECRET,
    }),
  ],
});

export const { onRequest, logout, getSession, signup } = auth$({
  providers: [
    GitHub({
      clientId: process.env.GITHUB_ID,
      clientSecret: process.env.GITHUB_SECRET,
    }),
    Facebook({
      clientId: process.env.FACEBOOK_ID,
      clientSecret: process.env.FACEBOOK_SECRET,
    }),
    Google({
      clientId: process.env.GOOGLE_ID,
      clientSecret: process.env.GOOGLE_SECRET,
    }),
  ],
});

=== test.js ===

import { serverAuthQrl } from "@auth/qwik";
import { qrl } from "@qwik.dev/core";
import { authQrl } from "@auth/qwik";
const i_XXXXXXXXXXXX = ()=>import("./test.tsx_auth_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = ()=>import("./test.tsx_serverAuth_XXXXXXXXXXXX");
export const { onRequest, logout, getSession, signup } = serverAuthQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "serverAuth_XXXXXXXXXXXX"));
export const { onRequest, logout, getSession, signup } = authQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "auth_XXXXXXXXXXXX"));

=== test.tsx_serverAuth_XXXXXXXXXXXX.js === (ENTRY)
import Facebook from "next-auth/providers/facebook";
import GitHub from "@auth/core/providers/github";
import Google from "next-auth/providers/google";
export const serverAuth_XXXXXXXXXXXX = {
  providers: [
    GitHub({
      clientId: process.env.GITHUB_ID,
      clientSecret: process.env.GITHUB_SECRET,
    }),
    Facebook({
      clientId: import.meta.env.FACEBOOK_ID,
      clientSecret: import.meta.env.FACEBOOK_SECRET,
    }),
    Google({
      clientId: process.env.GOOGLE_ID,
      clientSecret: process.env.GOOGLE_SECRET,
    }),
  ],
};

/*
{
  "origin": "test.tsx",
  "name": "serverAuth_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_serverAuth",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_serverAuth_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "serverAuth$",
  "captures": false
}
*/

=== test.tsx_auth_XXXXXXXXXXXX.js === (ENTRY)
import Facebook from "next-auth/providers/facebook";
import GitHub from "@auth/core/providers/github";
import Google from "next-auth/providers/google";
export const auth_XXXXXXXXXXXX = {
  providers: [
    GitHub({
      clientId: process.env.GITHUB_ID,
      clientSecret: process.env.GITHUB_SECRET,
    }),
    Facebook({
      clientId: process.env.FACEBOOK_ID,
      clientSecret: process.env.FACEBOOK_SECRET,
    }),
    Google({
      clientId: process.env.GOOGLE_ID,
      clientSecret: process.env.GOOGLE_SECRET,
    }),
  ],
};

/*
{
  "origin": "test.tsx",
  "name": "auth_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_auth",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_auth_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "auth$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
