crates/qwik-optimizer-oxc/tests/snapshots/example_skip_transform.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ as Component, $ as onRender } from "@qwik.dev/core";

export const handler = $(() => console.log("hola"));

export const App = component$((props) => {
  useStyles$("hola");
  return $(() => <div>{state.thing}</div>);
});

=== test.js ===
import { _jsxSorted } from "@qwik.dev/core";
export const handler = $(() => console.log("hola"));
export const App = component$((props) => {
  useStyles$("hola");
  return $(() => /* @__PURE__ */ _jsxSorted("div", null, null, state.thing, 1, "u6_0"));
});

=== DIAGNOSTICS ===

[]
